--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -13,6 +13,7 @@
     position: sticky;
     top: 0;
     background-color: themed('bg');
+    z-index: 999;
     .left {
         display: flex;
         align-items: center;
