--- a/client/src/components/rightbar/rightbar.scss
+++ b/client/src/components/rightbar/rightbar.scss
@@ -12,6 +12,13 @@
     &::-webkit-scrollbar{
         display: none;
     }
+
+    @include mobile {
+        display: none;
+    }
+    @include table {
+        display: none;
+    }
     .container{
 
         
